# glauth-ui

./: .gitignore  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
src/glauthui/: __init__.py  config.py  email.py  errors.py  extensions.py  forms.py  glauth.py  ldap.py  models.py  utils.py
src/glauthui/views/: adminview.py  routes.py
