[metadata]
name = Glauth UI
summary = A simple Flask application for managing users and groups for Glauth
description_file =
    README.md
author = Nils Thiele
author_email = da.schizzle@gmail.com
home_page = https://github.com/sonicnkt/glauth-ui
python_requires = >= 3.10
classifier =
    Development Status :: 4 - Beta
    Framework :: Flask
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operation System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: User Interfaces

[files]
packages =
    glauthui

[entry_points]
console_scripts =
    glauth-ui = glauthui:run_server
